@@ -6263,6 +6263,8 @@ gtk_tree_view_set_model (GtkTreeView  *tree_view,
 
   if (tree_view->priv->model)
     {
+      gtk_tree_view_unref_and_check_selection_tree (tree_view, tree_view->priv->tree);
+
       g_signal_handlers_disconnect_by_func (G_OBJECT (tree_view->priv->model),
 					    gtk_tree_view_range_changed, tree_view);
       g_signal_handlers_disconnect_by_func (G_OBJECT (tree_view->priv->model),
