@@ -1,3 +1,7 @@
+Sat Sep  8 01:44:32 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* POTFILES.in: missed one.
+
 2001-09-07  Darin Adler  <darin@bentspoon.com>
 
 	* POTFILES.in: Removed gtk/gtkcellrenderertextpixbuf.c
